--- a/index.html
+++ b/index.html
@@ -3,8 +3,25 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Spotify</title>
     <link rel="stylesheet" href="css/style.css" type="text/css" />
+    <!-- Font-Awesome per le icone -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+      integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
-  <body></body>
+  <body>
+    <div id="wrapper">
+      <main>
+        <section class="side-bar"></section>
+        <section class="app"></section>
+      </main>
+
+      <footer></footer>
+    </div>
+  </body>
 </html>
