start building side-bar

--- a/index.html
+++ b/index.html
@@ -17,10 +17,25 @@
   <body>
     <div id="wrapper">
       <main>
-        <section class="side-bar"></section>
+        <section class="side-bar">
+          <div class="logo">
+            <img src="/img/logo.svg" alt="logo Spotify" />
+          </div>
+          <div class="icon-nav">
+            <img src="/img/home.svg" alt="logo home" />
+            <h5>Home</h5>
+          </div>
+          <div class="icon-nav">
+            <img src="/img/search.svg" alt="logo search" />
+            <h5>Cerca</h5>
+          </div>
+          <div class="icon-nav">
+            <img src="/img/libreria.svg" alt="logo libreria" />
+            <h5>La tua libreria</h5>
+          </div>
+        </section>
         <section class="app"></section>
       </main>
-
       <footer></footer>
     </div>
   </body>
