--- a/index.html
+++ b/index.html
@@ -18,21 +18,29 @@
     <div id="wrapper">
       <main>
         <section class="side-bar">
-          <div class="logo">
-            <img src="/img/logo.svg" alt="logo Spotify" />
+          <!-- upper bar section -->
+          <div class="upper-bar">
+            <div class="logo">
+              <img src="/img/logo.svg" alt="logo Spotify" />
+            </div>
+            <div class="icon-nav">
+              <img src="/img/home.svg" alt="logo home" />
+              <h5>Home</h5>
+            </div>
+            <div class="icon-nav">
+              <img src="/img/search.svg" alt="logo search" />
+              <h5>Cerca</h5>
+            </div>
+            <div class="icon-nav">
+              <img src="/img/libreria.svg" alt="logo libreria" />
+              <h5>La tua libreria</h5>
+            </div>
+            <div class="playlist">
+              <h4>PLAYLIST</h4>
+            </div>
           </div>
-          <div class="icon-nav">
-            <img src="/img/home.svg" alt="logo home" />
-            <h5>Home</h5>
-          </div>
-          <div class="icon-nav">
-            <img src="/img/search.svg" alt="logo search" />
-            <h5>Cerca</h5>
-          </div>
-          <div class="icon-nav">
-            <img src="/img/libreria.svg" alt="logo libreria" />
-            <h5>La tua libreria</h5>
-          </div>
+          <!-- lower bar section -->
+          <div class="lower-bar"></div>
         </section>
         <section class="app"></section>
       </main>
