add playlist section

--- a/index.html
+++ b/index.html
@@ -37,6 +37,16 @@
             </div>
             <div class="playlist">
               <h4>PLAYLIST</h4>
+              <ul>
+                <li>Crea Playlist</li>
+                <li>Nome Playlist</li>
+                <li>Nome Playlist</li>
+                <li>Nome Playlist</li>
+                <li>Nome Playlist</li>
+                <li>Nome Playlist</li>
+                <li>Nome Playlist</li>
+                <li>Nome Playlist</li>
+              </ul>
             </div>
           </div>
           <!-- lower bar section -->
