Add lower-bar in side-bar

--- a/index.html
+++ b/index.html
@@ -50,7 +50,17 @@
             </div>
           </div>
           <!-- lower bar section -->
-          <div class="lower-bar"></div>
+          <div class="lower-bar">
+            <div class="download">
+              <img src="/img/download.svg" alt="logo download" />
+              <h5>Installa l'app</h5>
+            </div>
+            <hr class="line" />
+            <div class="user-area">
+              <img src="/img/profile.svg" alt="logo user" />
+              <h5>Saverio Mandarano</h5>
+            </div>
+          </div>
         </section>
         <section class="app"></section>
       </main>
