start building music-player section

--- a/index.html
+++ b/index.html
@@ -64,7 +64,11 @@
         </section>
         <section class="app"></section>
       </main>
-      <footer></footer>
+      <footer>
+        <div class="item1"></div>
+        <div class="item2"></div>
+        <div class="item3"></div>
+      </footer>
     </div>
   </body>
 </html>
