--- a/index.html
+++ b/index.html
@@ -65,9 +65,15 @@
         <section class="app"></section>
       </main>
       <footer>
-        <div class="item1"></div>
-        <div class="item2"></div>
-        <div class="item3"></div>
+        <div class="music-info">
+          <img src="img/sinister.jpeg" alt="logo canzone" />
+          <div class="info">
+            <h5>Sinister</h5>
+            <h6>Brano nome</h6>
+          </div>
+        </div>
+        <div class="music-player"></div>
+        <div class="music-setting"></div>
       </footer>
     </div>
   </body>
