--- a/index.html
+++ b/index.html
@@ -71,6 +71,9 @@
             <h5>Sinister</h5>
             <h6>Brano nome</h6>
           </div>
+          <i class="fa-regular fa-heart"></i>
+          <i class="fa-regular fa-folder"></i>
+          <div class="archivio-task"></div>
         </div>
         <div class="music-player"></div>
         <div class="music-setting"></div>
