agggiunti commenti per domani

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
             <div class="logo">
               <img src="/img/logo.svg" alt="logo Spotify" />
             </div>
+
+            <!-- potevo metterli n lista logo home, logo search e logo libreria. Devo metterli come link -->
             <div class="icon-nav">
               <img src="/img/home.svg" alt="logo home" />
               <h5>Home</h5>
@@ -35,6 +37,8 @@
               <img src="/img/libreria.svg" alt="logo libreria" />
               <h5>La tua libreria</h5>
             </div>
+
+            <!-- devo creare bottone, e mettere link  -->
             <div class="playlist">
               <h4>PLAYLIST</h4>
               <ul>
@@ -49,6 +53,7 @@
               </ul>
             </div>
           </div>
+
           <!-- lower bar section -->
           <div class="lower-bar">
             <div class="download">
