inizio suddivisione sezione footer

--- a/index.html
+++ b/index.html
@@ -80,7 +80,11 @@
           <i class="fa-regular fa-folder"></i>
           <div class="archivio-task"></div>
         </div>
-        <div class="music-player"></div>
+        <!-- qui inizio la sezione music-player -->
+        <div class="music-player">
+          <div class="player-controls"></div>
+          <div class="progress-bar"></div>
+        </div>
         <div class="music-setting"></div>
       </footer>
     </div>
