aggiunte icone al player-controls

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
               <h5>La tua libreria</h5>
             </div>
 
-            <!-- devo creare bottone, e mettere link  -->
+            <!-- devo creare bottone, e mettere link con cambio colore  -->
             <div class="playlist">
               <h4>PLAYLIST</h4>
               <ul>
@@ -82,10 +82,28 @@
         </div>
         <!-- qui inizio la sezione music-player -->
         <div class="music-player">
-          <div class="player-controls"></div>
+          <div class="player-controls">
+            <i class="fa-solid fa-shuffle"></i>
+            <i class="fa-solid fa-backward-step"></i>
+            <i class="fa-regular fa-circle-play"></i>
+            <i class="fa-solid fa-forward-step"></i>
+            <i class="fa-solid fa-rotate-right"></i>
+          </div>
           <div class="progress-bar"></div>
         </div>
-        <div class="music-setting"></div>
+        <!-- qui inizio la sezione music-settin -->
+        <div class="music-setting">
+          <i class="fa-solid fa-shuffle"></i>
+          <i class="fa-solid fa-backward-step"></i>
+          <i class="fa-regular fa-circle-play"></i>
+          <i class="fa-solid fa-forward-step"></i>
+          <i class="fa-solid fa-rotate-right"></i>
+          <i class="fa-solid fa-shuffle"></i>
+          <i class="fa-solid fa-backward-step"></i>
+          <i class="fa-regular fa-circle-play"></i>
+          <i class="fa-solid fa-forward-step"></i>
+          <i class="fa-solid fa-rotate-right"></i>
+        </div>
       </footer>
     </div>
   </body>
