add time, time-container e time-bar

--- a/index.html
+++ b/index.html
@@ -89,7 +89,13 @@
             <i class="fa-solid fa-forward-step"></i>
             <i class="fa-solid fa-rotate-right"></i>
           </div>
-          <div class="progress-bar"></div>
+          <div class="player-time">
+            <span class="time">00:25</span>
+            <div class="time-container">
+              <div class="time-bar"></div>
+            </div>
+            <span class="time">4:35</span>
+          </div>
         </div>
         <!-- qui inizio la sezione music-settin -->
         <div class="music-setting">
