--- a/index.html
+++ b/index.html
@@ -99,16 +99,12 @@
         </div>
         <!-- qui inizio la sezione music-settin -->
         <div class="music-setting">
-          <i class="fa-solid fa-shuffle"></i>
-          <i class="fa-solid fa-backward-step"></i>
-          <i class="fa-regular fa-circle-play"></i>
-          <i class="fa-solid fa-forward-step"></i>
-          <i class="fa-solid fa-rotate-right"></i>
-          <i class="fa-solid fa-shuffle"></i>
-          <i class="fa-solid fa-backward-step"></i>
-          <i class="fa-regular fa-circle-play"></i>
-          <i class="fa-solid fa-forward-step"></i>
-          <i class="fa-solid fa-rotate-right"></i>
+          <i class="fa-solid fa-bars"></i>
+          <i class="fa-solid fa-desktop"></i>
+          <i class="fa-solid fa-volume-high"></i>
+          <div class="time-container">
+            <div class="time-bar"></div>
+          </div>
         </div>
       </footer>
     </div>
