problemi nello scrool

--- a/index.html
+++ b/index.html
@@ -18,13 +18,10 @@
     <div id="wrapper">
       <main>
         <section class="side-bar">
-          <!-- upper bar section -->
           <div class="upper-bar">
             <div class="logo">
               <img src="/img/logo.svg" alt="logo Spotify" />
             </div>
-
-            <!-- potevo metterli n lista logo home, logo search e logo libreria. Devo metterli come link -->
             <div class="icon-nav">
               <img src="/img/home.svg" alt="logo home" />
               <h5>Home</h5>
@@ -37,11 +34,10 @@
               <img src="/img/libreria.svg" alt="logo libreria" />
               <h5>La tua libreria</h5>
             </div>
-
-            <!-- devo creare bottone, e mettere link con cambio colore  -->
             <div class="playlist">
               <h4>PLAYLIST</h4>
               <ul>
+                <!-- qui devo aggiungere il bottone -->
                 <li>Crea Playlist</li>
                 <li>Nome Playlist</li>
                 <li>Nome Playlist</li>
@@ -54,7 +50,6 @@
             </div>
           </div>
 
-          <!-- lower bar section -->
           <div class="lower-bar">
             <div class="download">
               <img src="/img/download.svg" alt="logo download" />
@@ -67,7 +62,226 @@
             </div>
           </div>
         </section>
-        <section class="app"></section>
+        <section class="app">
+          <!-- Header fisso -->
+          <div class="app-header">
+            <button>EFFETTUA L'UPGRADE</button>
+          </div>
+          <div class="app-content">
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minus
+              quod labore atque culpa harum saepe, consequuntur dolore corporis,
+              rem inventore ea provident natus accusantium adipisci omnis,
+              corrupti dolorem repellendus? Autem. Lorem ipsum dolor sit amet
+              consectetur, adipisicing elit. Minus quod labore atque culpa harum
+              saepe, consequuntur dolore corporis, rem inventore ea provident
+              natus accusantium adipisci omnis, corrupti dolorem repellendus?
+              Autem. Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+              Minus quod labore atque culpa harum saepe, consequuntur dolore
+              corporis, rem inventore ea provident natus accusantium adipisci
+              omnis, corrupti dolorem repellendus? Autem. Lorem ipsum dolor sit
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minus
+              quod labore atque culpa harum saepe, consequuntur dolore corporis,
+              rem inventore ea provident natus accusantium adipisci omnis,
+              corrupti dolorem repellendus? Autem. Lorem ipsum dolor sit amet
+              consectetur, adipisicing elit. Minus quod labore atque culpa harum
+              saepe, consequuntur dolore corporis, rem inventore ea provident
+              natus accusantium adipisci omnis, corrupti dolorem repellendus?
+              Autem. Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+              Minus quod labore atque culpa harum saepe, consequuntur dolore
+              corporis, rem inventore ea provident natus accusantium adipisci
+              omnis, corrupti dolorem repellendus? Autem. Lorem ipsum dolor sit
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minus
+              quod labore atque culpa harum saepe, consequuntur dolore corporis,
+              rem inventore ea provident natus accusantium adipisci omnis,
+              corrupti dolorem repellendus? Autem. Lorem ipsum dolor sit amet
+              consectetur, adipisicing elit. Minus quod labore atque culpa harum
+              saepe, consequuntur dolore corporis, rem inventore ea provident
+              natus accusantium adipisci omnis, corrupti dolorem repellendus?
+              Autem. Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+              Minus quod labore atque culpa harum saepe, consequuntur dolore
+              corporis, rem inventore ea provident natus accusantium adipisci
+              omnis, corrupti dolorem repellendus? Autem. Lorem ipsum dolor sit
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minus
+              quod labore atque culpa harum saepe, consequuntur dolore corporis,
+              rem inventore ea provident natus accusantium adipisci omnis,
+              corrupti dolorem repellendus? Autem. Lorem ipsum dolor sit amet
+              consectetur, adipisicing elit. Minus quod labore atque culpa harum
+              saepe, consequuntur dolore corporis, rem inventore ea provident
+              natus accusantium adipisci omnis, corrupti dolorem repellendus?
+              Autem. Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+              Minus quod labore atque culpa harum saepe, consequuntur dolore
+              corporis, rem inventore ea provident natus accusantium adipisci
+              omnis, corrupti dolorem repellendus? Autem. Lorem ipsum dolor sit
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minus
+              quod labore atque culpa harum saepe, consequuntur dolore corporis,
+              rem inventore ea provident natus accusantium adipisci omnis,
+              corrupti dolorem repellendus? Autem. Lorem ipsum dolor sit amet
+              consectetur, adipisicing elit. Minus quod labore atque culpa harum
+              saepe, consequuntur dolore corporis, rem inventore ea provident
+              natus accusantium adipisci omnis, corrupti dolorem repellendus?
+              Autem. Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+              Minus quod labore atque culpa harum saepe, consequuntur dolore
+              corporis, rem inventore ea provident natus accusantium adipisci
+              omnis, corrupti dolorem repellendus? Autem. Lorem ipsum dolor sit
+              amet consectetur, adipisicing elit. Minus quod labore atque culpa
+              harum saepe, consequuntur dolore corporis, rem inventore ea
+              provident natus accusantium adipisci omnis, corrupti dolorem
+              repellendus? Autem. Lorem ipsum dolor sit amet consectetur,
+              adipisicing elit. Minus quod labore atque culpa harum saepe,
+              consequuntur dolore corporis, rem inventore ea provident natus
+              accusantium adipisci omnis, corrupti dolorem repellendus? Autem.
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minus
+              quod labore atque culpa harum saepe, consequuntur dolore corporis,
+              rem inventore ea provident natus accusantium adipisci omnis,
+              corrupti dolorem repellendus? Autem. Lorem ipsum dolor sit amet
+              consectetur, adipisicing elit. Minus quod labore atque culpa harum
+              saepe, consequuntur dolore corporis, rem inventore ea provident
+              natus accusantium adipisci omnis, corrupti dolorem repellendus?
+              Autem. Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+              Minus quod labore atque culpa harum saepe, consequuntur dolore
+              corporis, rem inventore ea provident natus accusantium adipisci
+              omnis, corrupti dolorem repellendus? Autem. Lorem ipsum dolor sit
+              amet consectetur, adipisicing elit. Minus quod labore atque culpa
+              harum saepe, consequuntur dolore corporis, rem inventore ea
+              provident natus accusantium adipisci omnis, corrupti dolorem
+              repellendus? Autem. Lorem ipsum dolor sit amet consectetur,
+              adipisicing elit. Minus quod labore atque culpa harum saepe,
+              consequuntur dolore corporis, rem inventore ea provident natus
+              accusantium adipisci omnis, corrupti dolorem repellendus? Autem.
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minus
+              quod labore atque culpa harum saepe, consequuntur dolore corporis,
+              rem inventore ea provident natus accusantium adipisci omnis,
+              corrupti dolorem repellendus? Autem. Lorem ipsum dolor sit amet
+              consectetur, adipisicing elit. Minus quod labore atque culpa harum
+              saepe, consequuntur dolore corporis, rem inventore ea provident
+              natus accusantium adipisci omnis, corrupti dolorem repellendus?
+              Autem. Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+              Minus quod labore atque culpa harum saepe, consequuntur dolore
+              corporis, rem inventore ea provident natus accusantium adipisci
+              omnis, corrupti dolorem repellendus? Autem. Lorem ipsum dolor sit
+              amet consectetur, adipisicing elit. Minus quod labore atque culpa
+              harum saepe, consequuntur dolore corporis, rem inventore ea
+              provident natus accusantium adipisci omnis, corrupti dolorem
+              repellendus? Autem. Lorem ipsum dolor sit amet consectetur,
+              adipisicing elit. Minus quod labore atque culpa harum saepe,
+              consequuntur dolore corporis, rem inventore ea provident natus
+              accusantium adipisci omnis, corrupti dolorem repellendus? Autem.
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minus
+              quod labore atque culpa harum saepe, consequuntur dolore corporis,
+              rem inventore ea provident natus accusantium adipisci omnis,
+              corrupti dolorem repellendus? Autem. Lorem ipsum dolor sit amet
+              consectetur, adipisicing elit. Minus quod labore atque culpa harum
+              saepe, consequuntur dolore corporis, rem inventore ea provident
+              natus accusantium adipisci omnis, corrupti dolorem repellendus?
+              Autem. Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+              Minus quod labore atque culpa harum saepe, consequuntur dolore
+              corporis, rem inventore ea provident natus accusantium adipisci
+              omnis, corrupti dolorem repellendus? Autem. Lorem ipsum dolor sit
+              amet consectetur, adipisicing elit. Minus quod labore atque culpa
+              harum saepe, consequuntur dolore corporis, rem inventore ea
+              provident natus accusantium adipisci omnis, corrupti dolorem
+              repellendus? Autem. Lorem ipsum dolor sit amet consectetur,
+              adipisicing elit. Minus quod labore atque culpa harum saepe,
+              consequuntur dolore corporis, rem inventore ea provident natus
+              accusantium adipisci omnis, corrupti dolorem repellendus? Autem.
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minus
+              quod labore atque culpa harum saepe, consequuntur dolore corporis,
+              rem inventore ea provident natus accusantium adipisci omnis,
+              corrupti dolorem repellendus? Autem. Lorem ipsum dolor sit amet
+              consectetur, adipisicing elit. Minus quod labore atque culpa harum
+              saepe, consequuntur dolore corporis, rem inventore ea provident
+              natus accusantium adipisci omnis, corrupti dolorem repellendus?
+              Autem. Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+              Minus quod labore atque culpa harum saepe, consequuntur dolore
+              corporis, rem inventore ea provident natus accusantium adipisci
+              omnis, corrupti dolorem repellendus? Autem. Lorem ipsum dolor sit
+              amet consectetur, adipisicing elit. Minus quod labore atque culpa
+              harum saepe, consequuntur dolore corporis, rem inventore ea
+              provident natus accusantium adipisci omnis, corrupti dolorem
+              repellendus? Autem. Lorem ipsum dolor sit amet consectetur,
+              adipisicing elit. Minus quod labore atque culpa harum saepe,
+              consequuntur dolore corporis, rem inventore ea provident natus
+              accusantium adipisci omnis, corrupti dolorem repellendus? Autem.
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minus
+              quod labore atque culpa harum saepe, consequuntur dolore corporis,
+              rem inventore ea provident natus accusantium adipisci omnis,
+              corrupti dolorem repellendus? Autem. Lorem ipsum dolor sit amet
+              consectetur, adipisicing elit. Minus quod labore atque culpa harum
+              saepe, consequuntur dolore corporis, rem inventore ea provident
+              natus accusantium adipisci omnis, corrupti dolorem repellendus?
+              Autem. Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+              Minus quod labore atque culpa harum saepe, consequuntur dolore
+              corporis, rem inventore ea provident natus accusantium adipisci
+              omnis, corrupti dolorem repellendus? Autem. Lorem ipsum dolor sit
+              amet consectetur, adipisicing elit. Minus quod labore atque culpa
+              harum saepe, consequuntur dolore corporis, rem inventore ea
+              provident natus accusantium adipisci omnis, corrupti dolorem
+              repellendus? Autem. Lorem ipsum dolor sit amet consectetur,
+              adipisicing elit. Minus quod labore atque culpa harum saepe,
+              consequuntur dolore corporis, rem inventore ea provident natus
+              accusantium adipisci omnis, corrupti dolorem repellendus? Autem.
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minus
+              quod labore atque culpa harum saepe, consequuntur dolore corporis,
+              rem inventore ea provident natus accusantium adipisci omnis,
+              corrupti dolorem repellendus? Autem. Lorem ipsum dolor sit amet
+              consectetur, adipisicing elit. Minus quod labore atque culpa harum
+              saepe, consequuntur dolore corporis, rem inventore ea provident
+              natus accusantium adipisci omnis, corrupti dolorem repellendus?
+              Autem. Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+              Minus quod labore atque culpa harum saepe, consequuntur dolore
+              corporis, rem inventore ea provident natus accusantium adipisci
+              omnis, corrupti dolorem repellendus? Autem. Lorem ipsum dolor sit
+              amet consectetur, adipisicing elit. Minus quod labore atque culpa
+              harum saepe, consequuntur dolore corporis, rem inventore ea
+              provident natus accusantium adipisci omnis, corrupti dolorem
+              repellendus? Autem. Lorem ipsum dolor sit amet consectetur,
+              adipisicing elit. Minus quod labore atque culpa harum saepe,
+              consequuntur dolore corporis, rem inventore ea provident natus
+              accusantium adipisci omnis, corrupti dolorem repellendus? Autem.
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minus
+              quod labore atque culpa harum saepe, consequuntur dolore corporis,
+              rem inventore ea provident natus accusantium adipisci omnis,
+              corrupti dolorem repellendus? Autem. Lorem ipsum dolor sit amet
+              consectetur, adipisicing elit. Minus quod labore atque culpa harum
+              saepe, consequuntur dolore corporis, rem inventore ea provident
+              natus accusantium adipisci omnis, corrupti dolorem repellendus?
+              Autem. Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+              Minus quod labore atque culpa harum saepe, consequuntur dolore
+              corporis, rem inventore ea provident natus accusantium adipisci
+              omnis, corrupti dolorem repellendus? Autem. Lorem ipsum dolor sit
+              amet consectetur, adipisicing elit. Minus quod labore atque culpa
+              harum saepe, consequuntur dolore corporis, rem inventore ea
+              provident natus accusantium adipisci omnis, corrupti dolorem
+              repellendus? Autem. Lorem ipsum dolor sit amet consectetur,
+              adipisicing elit. Minus quod labore atque culpa harum saepe,
+              consequuntur dolore corporis, rem inventore ea provident natus
+              accusantium adipisci omnis, corrupti dolorem repellendus? Autem.
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minus
+              quod labore atque culpa harum saepe, consequuntur dolore corporis,
+              rem inventore ea provident natus accusantium adipisci omnis,
+              corrupti dolorem repellendus? Autem. Lorem ipsum dolor sit amet
+              consectetur, adipisicing elit. Minus quod labore atque culpa harum
+              saepe, consequuntur dolore corporis, rem inventore ea provident
+              natus accusantium adipisci omnis, corrupti dolorem repellendus?
+              Autem. Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+              Minus quod labore atque culpa harum saepe, consequuntur dolore
+              corporis, rem inventore ea provident natus accusantium adipisci
+              omnis, corrupti dolorem repellendus? Autem. Lorem ipsum dolor sit
+              amet consectetur, adipisicing elit. Minus quod labore atque culpa
+              harum saepe, consequuntur dolore corporis, rem inventore ea
+              provident natus accusantium adipisci omnis, corrupti dolorem
+              repellendus? Autem. Lorem ipsum dolor sit amet consectetur,
+              adipisicing elit. Minus quod labore atque culpa harum saepe,
+              consequuntur dolore corporis, rem inventore ea provident natus
+              accusantium adipisci omnis, corrupti dolorem repellendus? Autem.
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minus
+              quod labore atque culpa harum saepe, consequuntur dolore corporis,
+              rem inventore ea provident natus accusantium adipisci omnis,
+              corrupti dolorem repellendus? Autem.
+            </p>
+          </div>
+        </section>
       </main>
       <footer>
         <div class="music-info">
@@ -79,7 +293,6 @@
           <i class="fa-regular fa-heart"></i>
           <i class="fa-regular fa-folder"></i>
         </div>
-        <!-- qui inizio la sezione music-player -->
         <div class="music-player">
           <div class="player-controls">
             <i class="fa-solid fa-shuffle"></i>
@@ -96,7 +309,6 @@
             <span class="time">4:35</span>
           </div>
         </div>
-        <!-- qui inizio la sezione music-settin -->
         <div class="music-setting">
           <i class="fa-solid fa-bars"></i>
           <i class="fa-solid fa-desktop"></i>
