--- a/index.html
+++ b/index.html
@@ -63,223 +63,20 @@
           </div>
         </section>
         <section class="app">
-          <!-- Header fisso -->
           <div class="app-header">
             <button>EFFETTUA L'UPGRADE</button>
           </div>
           <div class="app-content">
-            <p>
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minus
-              quod labore atque culpa harum saepe, consequuntur dolore corporis,
-              rem inventore ea provident natus accusantium adipisci omnis,
-              corrupti dolorem repellendus? Autem. Lorem ipsum dolor sit amet
-              consectetur, adipisicing elit. Minus quod labore atque culpa harum
-              saepe, consequuntur dolore corporis, rem inventore ea provident
-              natus accusantium adipisci omnis, corrupti dolorem repellendus?
-              Autem. Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-              Minus quod labore atque culpa harum saepe, consequuntur dolore
-              corporis, rem inventore ea provident natus accusantium adipisci
-              omnis, corrupti dolorem repellendus? Autem. Lorem ipsum dolor sit
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minus
-              quod labore atque culpa harum saepe, consequuntur dolore corporis,
-              rem inventore ea provident natus accusantium adipisci omnis,
-              corrupti dolorem repellendus? Autem. Lorem ipsum dolor sit amet
-              consectetur, adipisicing elit. Minus quod labore atque culpa harum
-              saepe, consequuntur dolore corporis, rem inventore ea provident
-              natus accusantium adipisci omnis, corrupti dolorem repellendus?
-              Autem. Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-              Minus quod labore atque culpa harum saepe, consequuntur dolore
-              corporis, rem inventore ea provident natus accusantium adipisci
-              omnis, corrupti dolorem repellendus? Autem. Lorem ipsum dolor sit
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minus
-              quod labore atque culpa harum saepe, consequuntur dolore corporis,
-              rem inventore ea provident natus accusantium adipisci omnis,
-              corrupti dolorem repellendus? Autem. Lorem ipsum dolor sit amet
-              consectetur, adipisicing elit. Minus quod labore atque culpa harum
-              saepe, consequuntur dolore corporis, rem inventore ea provident
-              natus accusantium adipisci omnis, corrupti dolorem repellendus?
-              Autem. Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-              Minus quod labore atque culpa harum saepe, consequuntur dolore
-              corporis, rem inventore ea provident natus accusantium adipisci
-              omnis, corrupti dolorem repellendus? Autem. Lorem ipsum dolor sit
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minus
-              quod labore atque culpa harum saepe, consequuntur dolore corporis,
-              rem inventore ea provident natus accusantium adipisci omnis,
-              corrupti dolorem repellendus? Autem. Lorem ipsum dolor sit amet
-              consectetur, adipisicing elit. Minus quod labore atque culpa harum
-              saepe, consequuntur dolore corporis, rem inventore ea provident
-              natus accusantium adipisci omnis, corrupti dolorem repellendus?
-              Autem. Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-              Minus quod labore atque culpa harum saepe, consequuntur dolore
-              corporis, rem inventore ea provident natus accusantium adipisci
-              omnis, corrupti dolorem repellendus? Autem. Lorem ipsum dolor sit
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minus
-              quod labore atque culpa harum saepe, consequuntur dolore corporis,
-              rem inventore ea provident natus accusantium adipisci omnis,
-              corrupti dolorem repellendus? Autem. Lorem ipsum dolor sit amet
-              consectetur, adipisicing elit. Minus quod labore atque culpa harum
-              saepe, consequuntur dolore corporis, rem inventore ea provident
-              natus accusantium adipisci omnis, corrupti dolorem repellendus?
-              Autem. Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-              Minus quod labore atque culpa harum saepe, consequuntur dolore
-              corporis, rem inventore ea provident natus accusantium adipisci
-              omnis, corrupti dolorem repellendus? Autem. Lorem ipsum dolor sit
-              amet consectetur, adipisicing elit. Minus quod labore atque culpa
-              harum saepe, consequuntur dolore corporis, rem inventore ea
-              provident natus accusantium adipisci omnis, corrupti dolorem
-              repellendus? Autem. Lorem ipsum dolor sit amet consectetur,
-              adipisicing elit. Minus quod labore atque culpa harum saepe,
-              consequuntur dolore corporis, rem inventore ea provident natus
-              accusantium adipisci omnis, corrupti dolorem repellendus? Autem.
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minus
-              quod labore atque culpa harum saepe, consequuntur dolore corporis,
-              rem inventore ea provident natus accusantium adipisci omnis,
-              corrupti dolorem repellendus? Autem. Lorem ipsum dolor sit amet
-              consectetur, adipisicing elit. Minus quod labore atque culpa harum
-              saepe, consequuntur dolore corporis, rem inventore ea provident
-              natus accusantium adipisci omnis, corrupti dolorem repellendus?
-              Autem. Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-              Minus quod labore atque culpa harum saepe, consequuntur dolore
-              corporis, rem inventore ea provident natus accusantium adipisci
-              omnis, corrupti dolorem repellendus? Autem. Lorem ipsum dolor sit
-              amet consectetur, adipisicing elit. Minus quod labore atque culpa
-              harum saepe, consequuntur dolore corporis, rem inventore ea
-              provident natus accusantium adipisci omnis, corrupti dolorem
-              repellendus? Autem. Lorem ipsum dolor sit amet consectetur,
-              adipisicing elit. Minus quod labore atque culpa harum saepe,
-              consequuntur dolore corporis, rem inventore ea provident natus
-              accusantium adipisci omnis, corrupti dolorem repellendus? Autem.
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minus
-              quod labore atque culpa harum saepe, consequuntur dolore corporis,
-              rem inventore ea provident natus accusantium adipisci omnis,
-              corrupti dolorem repellendus? Autem. Lorem ipsum dolor sit amet
-              consectetur, adipisicing elit. Minus quod labore atque culpa harum
-              saepe, consequuntur dolore corporis, rem inventore ea provident
-              natus accusantium adipisci omnis, corrupti dolorem repellendus?
-              Autem. Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-              Minus quod labore atque culpa harum saepe, consequuntur dolore
-              corporis, rem inventore ea provident natus accusantium adipisci
-              omnis, corrupti dolorem repellendus? Autem. Lorem ipsum dolor sit
-              amet consectetur, adipisicing elit. Minus quod labore atque culpa
-              harum saepe, consequuntur dolore corporis, rem inventore ea
-              provident natus accusantium adipisci omnis, corrupti dolorem
-              repellendus? Autem. Lorem ipsum dolor sit amet consectetur,
-              adipisicing elit. Minus quod labore atque culpa harum saepe,
-              consequuntur dolore corporis, rem inventore ea provident natus
-              accusantium adipisci omnis, corrupti dolorem repellendus? Autem.
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minus
-              quod labore atque culpa harum saepe, consequuntur dolore corporis,
-              rem inventore ea provident natus accusantium adipisci omnis,
-              corrupti dolorem repellendus? Autem. Lorem ipsum dolor sit amet
-              consectetur, adipisicing elit. Minus quod labore atque culpa harum
-              saepe, consequuntur dolore corporis, rem inventore ea provident
-              natus accusantium adipisci omnis, corrupti dolorem repellendus?
-              Autem. Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-              Minus quod labore atque culpa harum saepe, consequuntur dolore
-              corporis, rem inventore ea provident natus accusantium adipisci
-              omnis, corrupti dolorem repellendus? Autem. Lorem ipsum dolor sit
-              amet consectetur, adipisicing elit. Minus quod labore atque culpa
-              harum saepe, consequuntur dolore corporis, rem inventore ea
-              provident natus accusantium adipisci omnis, corrupti dolorem
-              repellendus? Autem. Lorem ipsum dolor sit amet consectetur,
-              adipisicing elit. Minus quod labore atque culpa harum saepe,
-              consequuntur dolore corporis, rem inventore ea provident natus
-              accusantium adipisci omnis, corrupti dolorem repellendus? Autem.
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minus
-              quod labore atque culpa harum saepe, consequuntur dolore corporis,
-              rem inventore ea provident natus accusantium adipisci omnis,
-              corrupti dolorem repellendus? Autem. Lorem ipsum dolor sit amet
-              consectetur, adipisicing elit. Minus quod labore atque culpa harum
-              saepe, consequuntur dolore corporis, rem inventore ea provident
-              natus accusantium adipisci omnis, corrupti dolorem repellendus?
-              Autem. Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-              Minus quod labore atque culpa harum saepe, consequuntur dolore
-              corporis, rem inventore ea provident natus accusantium adipisci
-              omnis, corrupti dolorem repellendus? Autem. Lorem ipsum dolor sit
-              amet consectetur, adipisicing elit. Minus quod labore atque culpa
-              harum saepe, consequuntur dolore corporis, rem inventore ea
-              provident natus accusantium adipisci omnis, corrupti dolorem
-              repellendus? Autem. Lorem ipsum dolor sit amet consectetur,
-              adipisicing elit. Minus quod labore atque culpa harum saepe,
-              consequuntur dolore corporis, rem inventore ea provident natus
-              accusantium adipisci omnis, corrupti dolorem repellendus? Autem.
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minus
-              quod labore atque culpa harum saepe, consequuntur dolore corporis,
-              rem inventore ea provident natus accusantium adipisci omnis,
-              corrupti dolorem repellendus? Autem. Lorem ipsum dolor sit amet
-              consectetur, adipisicing elit. Minus quod labore atque culpa harum
-              saepe, consequuntur dolore corporis, rem inventore ea provident
-              natus accusantium adipisci omnis, corrupti dolorem repellendus?
-              Autem. Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-              Minus quod labore atque culpa harum saepe, consequuntur dolore
-              corporis, rem inventore ea provident natus accusantium adipisci
-              omnis, corrupti dolorem repellendus? Autem. Lorem ipsum dolor sit
-              amet consectetur, adipisicing elit. Minus quod labore atque culpa
-              harum saepe, consequuntur dolore corporis, rem inventore ea
-              provident natus accusantium adipisci omnis, corrupti dolorem
-              repellendus? Autem. Lorem ipsum dolor sit amet consectetur,
-              adipisicing elit. Minus quod labore atque culpa harum saepe,
-              consequuntur dolore corporis, rem inventore ea provident natus
-              accusantium adipisci omnis, corrupti dolorem repellendus? Autem.
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minus
-              quod labore atque culpa harum saepe, consequuntur dolore corporis,
-              rem inventore ea provident natus accusantium adipisci omnis,
-              corrupti dolorem repellendus? Autem. Lorem ipsum dolor sit amet
-              consectetur, adipisicing elit. Minus quod labore atque culpa harum
-              saepe, consequuntur dolore corporis, rem inventore ea provident
-              natus accusantium adipisci omnis, corrupti dolorem repellendus?
-              Autem. Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-              Minus quod labore atque culpa harum saepe, consequuntur dolore
-              corporis, rem inventore ea provident natus accusantium adipisci
-              omnis, corrupti dolorem repellendus? Autem. Lorem ipsum dolor sit
-              amet consectetur, adipisicing elit. Minus quod labore atque culpa
-              harum saepe, consequuntur dolore corporis, rem inventore ea
-              provident natus accusantium adipisci omnis, corrupti dolorem
-              repellendus? Autem. Lorem ipsum dolor sit amet consectetur,
-              adipisicing elit. Minus quod labore atque culpa harum saepe,
-              consequuntur dolore corporis, rem inventore ea provident natus
-              accusantium adipisci omnis, corrupti dolorem repellendus? Autem.
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minus
-              quod labore atque culpa harum saepe, consequuntur dolore corporis,
-              rem inventore ea provident natus accusantium adipisci omnis,
-              corrupti dolorem repellendus? Autem. Lorem ipsum dolor sit amet
-              consectetur, adipisicing elit. Minus quod labore atque culpa harum
-              saepe, consequuntur dolore corporis, rem inventore ea provident
-              natus accusantium adipisci omnis, corrupti dolorem repellendus?
-              Autem. Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-              Minus quod labore atque culpa harum saepe, consequuntur dolore
-              corporis, rem inventore ea provident natus accusantium adipisci
-              omnis, corrupti dolorem repellendus? Autem. Lorem ipsum dolor sit
-              amet consectetur, adipisicing elit. Minus quod labore atque culpa
-              harum saepe, consequuntur dolore corporis, rem inventore ea
-              provident natus accusantium adipisci omnis, corrupti dolorem
-              repellendus? Autem. Lorem ipsum dolor sit amet consectetur,
-              adipisicing elit. Minus quod labore atque culpa harum saepe,
-              consequuntur dolore corporis, rem inventore ea provident natus
-              accusantium adipisci omnis, corrupti dolorem repellendus? Autem.
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minus
-              quod labore atque culpa harum saepe, consequuntur dolore corporis,
-              rem inventore ea provident natus accusantium adipisci omnis,
-              corrupti dolorem repellendus? Autem. Lorem ipsum dolor sit amet
-              consectetur, adipisicing elit. Minus quod labore atque culpa harum
-              saepe, consequuntur dolore corporis, rem inventore ea provident
-              natus accusantium adipisci omnis, corrupti dolorem repellendus?
-              Autem. Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-              Minus quod labore atque culpa harum saepe, consequuntur dolore
-              corporis, rem inventore ea provident natus accusantium adipisci
-              omnis, corrupti dolorem repellendus? Autem. Lorem ipsum dolor sit
-              amet consectetur, adipisicing elit. Minus quod labore atque culpa
-              harum saepe, consequuntur dolore corporis, rem inventore ea
-              provident natus accusantium adipisci omnis, corrupti dolorem
-              repellendus? Autem. Lorem ipsum dolor sit amet consectetur,
-              adipisicing elit. Minus quod labore atque culpa harum saepe,
-              consequuntur dolore corporis, rem inventore ea provident natus
-              accusantium adipisci omnis, corrupti dolorem repellendus? Autem.
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minus
-              quod labore atque culpa harum saepe, consequuntur dolore corporis,
-              rem inventore ea provident natus accusantium adipisci omnis,
-              corrupti dolorem repellendus? Autem.
-            </p>
+            <div class="nav-bar">
+              <ul>
+                <li>IN EVIDENZA</li>
+                <li>PODCAST</li>
+                <li>CLASSIFICHE</li>
+                <li>GENERI E MOOD</li>
+                <li>NUOVE USCITE</li>
+                <li>SCOPRI</li>
+              </ul>
+            </div>
           </div>
         </section>
       </main>
