suddivisione sezione app content

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             </div>
             <div class="icon-nav">
               <img src="/img/home.svg" alt="logo home" />
+              <!-- aggiungere stanghetta verde verticale -->
               <h5>Home</h5>
             </div>
             <div class="icon-nav">
@@ -64,6 +65,7 @@
         </section>
         <section class="app">
           <div class="app-header">
+            <!-- devo farlo ingrandire al passaggio del cursore -->
             <button>EFFETTUA L'UPGRADE</button>
           </div>
           <div class="app-content">
@@ -77,6 +79,11 @@
                 <li>SCOPRI</li>
               </ul>
             </div>
+            <div class="recently-played">
+              <h2>Recently played</h2>
+            </div>
+            <div class="created-for"></div>
+            <div class="popular-artist"></div>
           </div>
         </section>
       </main>
