aggiunto primo set di carte

--- a/index.html
+++ b/index.html
@@ -81,6 +81,74 @@
             </div>
             <div class="recently-played">
               <h2>Recently played</h2>
+              <div class="cards-wrapper">
+                <div class="card">
+                  <div class="img-wrapper">
+                    <img src="/img/metal_lifting.jpg " alt="copertina brano" />
+                  </div>
+                  <div class="info">
+                    <ul>
+                      <li>Heavy Metal</li>
+                      <li>Subtitle</li>
+                    </ul>
+                  </div>
+                </div>
+                <div class="card">
+                  <div class="img-wrapper">
+                    <img src="/img/metal_lifting.jpg " alt="copertina brano" />
+                  </div>
+                  <div class="info">
+                    <ul>
+                      <li>Heavy Metal</li>
+                      <li>Subtitle</li>
+                    </ul>
+                  </div>
+                </div>
+                <div class="card">
+                  <div class="img-wrapper">
+                    <img src="/img/metal_lifting.jpg " alt="copertina brano" />
+                  </div>
+                  <div class="info">
+                    <ul>
+                      <li>Heavy Metal</li>
+                      <li>Subtitle</li>
+                    </ul>
+                  </div>
+                </div>
+                <div class="card">
+                  <div class="img-wrapper">
+                    <img src="/img/metal_lifting.jpg " alt="copertina brano" />
+                  </div>
+                  <div class="info">
+                    <ul>
+                      <li>Heavy Metal</li>
+                      <li>Subtitle</li>
+                    </ul>
+                  </div>
+                </div>
+                <div class="card">
+                  <div class="img-wrapper">
+                    <img src="/img/metal_lifting.jpg " alt="copertina brano" />
+                  </div>
+                  <div class="info">
+                    <ul>
+                      <li>Heavy Metal</li>
+                      <li>Subtitle</li>
+                    </ul>
+                  </div>
+                </div>
+                <div class="card">
+                  <div class="img-wrapper">
+                    <img src="/img/metal_lifting.jpg " alt="copertina brano" />
+                  </div>
+                  <div class="info">
+                    <ul>
+                      <li>Heavy Metal</li>
+                      <li>Subtitle</li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
             </div>
             <div class="created-for"></div>
             <div class="popular-artist"></div>
