aggiunti nomi corretti, font, color, ecc alle immagini del primo set di carte

--- a/index.html
+++ b/index.html
@@ -95,62 +95,66 @@
                 </div>
                 <div class="card">
                   <div class="img-wrapper">
-                    <img src="/img/metal_lifting.jpg " alt="copertina brano" />
+                    <img src="/img/stranger.jpeg " alt="copertina brano" />
                   </div>
                   <div class="info">
                     <ul>
-                      <li>Heavy Metal</li>
+                      <li>
+                        Stranger Things, Vol. 1 (a Netflix Original Soundtrack)
+                      </li>
+                      <li>Kyle Dixon & Michael Stein</li>
+                    </ul>
+                  </div>
+                </div>
+                <div class="card">
+                  <div class="img-wrapper">
+                    <img src="/img/aquietplace.jpeg " alt="copertina brano" />
+                  </div>
+                  <div class="info">
+                    <ul>
+                      <li>A quiet place</li>
                       <li>Subtitle</li>
                     </ul>
                   </div>
                 </div>
                 <div class="card">
                   <div class="img-wrapper">
-                    <img src="/img/metal_lifting.jpg " alt="copertina brano" />
+                    <img src="/img/split.jpeg " alt="copertina brano" />
                   </div>
                   <div class="info">
                     <ul>
-                      <li>Heavy Metal</li>
+                      <li>Split</li>
                       <li>Subtitle</li>
                     </ul>
                   </div>
                 </div>
                 <div class="card">
                   <div class="img-wrapper">
-                    <img src="/img/metal_lifting.jpg " alt="copertina brano" />
+                    <img src="/img/cure.jpeg " alt="copertina brano" />
                   </div>
                   <div class="info">
                     <ul>
-                      <li>Heavy Metal</li>
+                      <li>A cure for wellness</li>
                       <li>Subtitle</li>
                     </ul>
                   </div>
                 </div>
                 <div class="card">
                   <div class="img-wrapper">
-                    <img src="/img/metal_lifting.jpg " alt="copertina brano" />
+                    <img src="/img/sinister.jpeg " alt="copertina brano" />
                   </div>
                   <div class="info">
                     <ul>
-                      <li>Heavy Metal</li>
-                      <li>Subtitle</li>
-                    </ul>
-                  </div>
-                </div>
-                <div class="card">
-                  <div class="img-wrapper">
-                    <img src="/img/metal_lifting.jpg " alt="copertina brano" />
-                  </div>
-                  <div class="info">
-                    <ul>
-                      <li>Heavy Metal</li>
+                      <li>Sinister</li>
                       <li>Subtitle</li>
                     </ul>
                   </div>
                 </div>
               </div>
             </div>
-            <div class="created-for"></div>
+            <div class="created-for">
+              <h2>Creato per John Doe</h2>
+            </div>
             <div class="popular-artist"></div>
           </div>
         </section>
