add secondo set di carte

--- a/index.html
+++ b/index.html
@@ -154,6 +154,32 @@
             </div>
             <div class="created-for">
               <h2>Creato per John Doe</h2>
+              <h5>Più ascolti, più accurati saranno i suggerimenti.</h5>
+              <div class="cards-wrapper">
+                <div class="card">
+                  <div class="img-wrapper">
+                    <img
+                      src="/img/radar.jpeg"
+                      alt="copertina released reader"
+                    />
+                  </div>
+                  <div class="info">
+                    <ul>
+                      <li>Release Radar</li>
+                    </ul>
+                  </div>
+                </div>
+                <div class="card">
+                  <div class="img-wrapper">
+                    <img src="/img/mixdaily.jpeg" alt="copertina daily mix" />
+                  </div>
+                  <div class="info">
+                    <ul>
+                      <li>Daily Mix 1</li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
             </div>
             <div class="popular-artist"></div>
           </div>
