add ultimo set di carte

--- a/index.html
+++ b/index.html
@@ -181,7 +181,32 @@
                 </div>
               </div>
             </div>
-            <div class="popular-artist"></div>
+            <div class="popular-artist">
+              <h2>Artisti più popolari</h2>
+              <h5>Più ascolti, più accurati saranno i suggerimenti.</h5>
+              <div class="cards-wrapper">
+                <div class="card">
+                  <div class="img-wrapper">
+                    <img src="/img/youg.jpeg" alt="copertina released reader" />
+                  </div>
+                  <div class="info">
+                    <ul>
+                      <li>Release Radar</li>
+                    </ul>
+                  </div>
+                </div>
+                <div class="card">
+                  <div class="img-wrapper">
+                    <img src="/img/einaudi.jpeg" alt="copertina daily mix" />
+                  </div>
+                  <div class="info">
+                    <ul>
+                      <li>Daily Mix 1</li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </section>
       </main>
