rislto un problema con gli h4 nella sidebar e sostituiti con span

--- a/index.html
+++ b/index.html
@@ -22,19 +22,23 @@
             <div class="logo">
               <img src="/img/logo.svg" alt="logo Spotify" />
             </div>
-            <div class="icon-nav">
-              <img src="/img/home.svg" alt="logo home" />
-              <!-- aggiungere stanghetta verde verticale -->
-              <h5>Home</h5>
-            </div>
-            <div class="icon-nav">
-              <img src="/img/search.svg" alt="logo search" />
-              <h5>Cerca</h5>
-            </div>
-            <div class="icon-nav">
-              <img src="/img/libreria.svg" alt="logo libreria" />
-              <h5>La tua libreria</h5>
-            </div>
+            <!-- aggiungere stanghetta verde verticale -->
+
+            <ul>
+              <li class="icon-nav">
+                <img src="/img/home.svg" alt="logo home" />
+                <span>Home</span>
+              </li>
+              <li class="icon-nav">
+                <img src="/img/search.svg" alt="logo search" />
+                <span>Cerca</span>
+              </li>
+              <li class="icon-nav">
+                <img src="/img/libreria.svg" alt="logo libreria" />
+                <span>La tua libreria</span>
+              </li>
+            </ul>
+
             <div class="playlist">
               <h4>PLAYLIST</h4>
               <ul>
