--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="logo">
               <img src="/img/logo.svg" alt="logo Spotify" />
             </div>
-            <!-- aggiungere stanghetta verde verticale -->
+            <!-- aggiungere stanghetta verde verticale al click -->
 
             <ul>
               <li class="icon-nav">
@@ -69,10 +69,10 @@
         </section>
         <section class="app">
           <div class="app-header">
-            <!-- devo farlo ingrandire al passaggio del cursore -->
             <button>EFFETTUA L'UPGRADE</button>
           </div>
           <div class="app-content">
+            <!-- aggiungere stanghetta verde verticale al click -->
             <div class="nav-bar">
               <ul>
                 <li>IN EVIDENZA</li>
@@ -87,6 +87,7 @@
               <h2>Recently played</h2>
               <div class="cards-wrapper">
                 <div class="card">
+                  <!-- qui al passaggio del cursore al centro della carta spunta un tasto play -->
                   <div class="img-wrapper">
                     <img src="/img/metal_lifting.jpg " alt="copertina brano" />
                   </div>
@@ -195,7 +196,7 @@
                   </div>
                   <div class="info">
                     <ul>
-                      <li>Release Radar</li>
+                      <li>Young</li>
                     </ul>
                   </div>
                 </div>
@@ -205,7 +206,7 @@
                   </div>
                   <div class="info">
                     <ul>
-                      <li>Daily Mix 1</li>
+                      <li>Einaudi</li>
                     </ul>
                   </div>
                 </div>
